ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: sirius
  annotations:
    traefik.ingress.Kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: my.app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: root-service
            port:
              number: 80 

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80

      - path: /info
        pathType: Prefix
        backend:
          service:
            name: info-service
            port:
              number: 80

      - path: /login
        pathType: Prefix
        backend:
          service:
            name: login-service
            port:
              number: 80
